# servant-openapi3

./: .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  servant-openapi3.cabal  servant-swagger.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
example/: example.cabal  swagger.json
example/src/: Todo.hs
src/Servant/: OpenApi.hs  Swagger.hs
src/Servant/OpenApi/: Internal.hs  Test.hs  TypeLevel.hs
src/Servant/OpenApi/Internal/: Orphans.hs  Test.hs  TypeLevel.hs
src/Servant/OpenApi/Internal/TypeLevel/: API.hs  Every.hs  TMap.hs
src/Servant/Swagger/: Internal.hs
src/Servant/Swagger/Internal/: Orphans.hs  Test.hs
test/Servant/: OpenApiSpec.hs  SwaggerSpec.hs
